grammar.js
    chunk: ($) => repeat1($._top_level_declaration),

    _top_level_declaration: ($) => $.script_declaration,

    decorator: ($) =>
      seq("@", field("name", $.identifier), optional($.decorator_arguments)),
    script_declaration: ($) =>
      seq(
        repeat($.decorator),
        "script",
        field("name", $.identifier),
        optional($.type_parameters),
        optional(seq("extends", field("base", $.type))),
        repeat($._member_declaration),
        "end",
      ),
    type_parameters: ($) => seq("<", _list(field("parameter", $.identifier), ","), ">"),

    _member_declaration: ($) =>
      choice(
        $.property_declaration,
        $.method_declaration,
        $.member_declaration,
        $.emitter_declaration,
        $.handler_declaration,
        $.constructor_declaration,
        $.operator_declaration,
      ),

    // "constructor Vector2(float x, float y) end" -- no return type (it
    // always constructs the enclosing script's own type) and no
    // "method"/"static" keyword of its own.
    constructor_declaration: ($) =>
      seq(
        repeat($.decorator),
        "constructor",
        field("name", $.identifier),
        field("parameters", $.parameter_list),
        optional(field("body", $.block)),
        "end",
      ),

    // "static operator boolean Inequality(Vector2 left, Vector2 right)
    // end" -- an operator overload, same shape as method_declaration
    // (every real sample is "static", but the modifier is kept optional
    // rather than required in case a future/undiscovered instance-level
    // operator exists).
    property_declaration: ($) =>
      seq(
        repeat($.decorator),
        repeat(field("modifier", choice("static", "readonly"))),
        "property",
        field("type", $.type),
        field("name", $.identifier),
        optional(seq("=", field("value", $.expression))),
      ),

    // Enum member ("member KR = 0") -- only ever seen directly inside a
    // script with no `extends` clause (an @Enum-decorated declaration),
    // but accepted anywhere in a member list rather than special-cased to
    // "enum only": a member list is otherwise indistinguishable from a
    // component's without re-deriving whether @Enum was present, and
    // there's no real ambiguity risk (no other member kind starts with
    // the bare word "member").
    member_declaration: ($) =>
      seq("member", field("name", $.identifier), "=", field("value", $.expression)),

    // Return type is a comma-separated list, not just one type -- a real
    // .d.mlua API declaration routinely returns more than one value, e.g.
    // "method LeaderboardResultCode, LeaderboardInfo CreateLeaderboardAndWait(...)".
    method_declaration: ($) =>
      seq(
        repeat($.decorator),
        optional(field("modifier", "static")),
        "method",
        field("return_type", $.type_list),
        field("name", $.identifier),
        field("parameters", $.parameter_list),
        optional(field("body", $.block)),
        "end",
      ),
    type_list: ($) => _list($.type, ","),

    // A native-API declaration file (.d.mlua) has no return type on an
    // emitter the way method_declaration does -- "emitter Name(...) end".
    parameter_list: ($) => seq("(", optional($.parameter_seq), ")"),
    parameter_seq: ($) => _list($.parameter, ","),
    // A trailing "..." marks a variadic parameter, e.g.
    // "method string GetTextFormat(string key, any... args) end".
    parameter: ($) =>
      seq(
        field("type", $.type),
        optional(field("variadic", "...")),
        field("name", $.identifier),
        optional(seq("=", field("default", $.expression))),
      ),

    // "Vector2", "int32", "List<Item>", "SyncList<Vector2>" -- a bare
    // identifier, optionally with one or more comma-separated generic type
    // arguments. Never confused with a real Lua comparison expression
    // (`a < b`) since `type` only ever appears in a property/parameter/
    // return-type slot, never inside `expression` itself. The optional
    // "-> ReturnType" suffix is a callback-parameter type, e.g.
    // "func<string> -> boolean callbackFunction" (a parameter named
    // callbackFunction, typed as a func<string>-to-boolean callback).
    type: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("<", _list(field("argument", $.type), ","), ">")),
        optional(seq("->", field("returns", $.type))),
      ),

    // ---- statements (verbatim from tree-sitter-lua) -----------------
    block: ($) => $._block,
    _block: ($) =>
      choice(
        $.return_statement,
        seq(repeat1($.statement), optional($.return_statement)),
      ),

    continue_statement: () => "continue",
    compound_assignment_statement: ($) =>
      seq(
        field("left", $.variable),
        field("operator", choice("+=", "-=", "*=", "/=", "%=")),
        field("right", $.expression),
      ),

    _value_list: ($) => _list(field("value", $.expression), ","),

    for_numeric_statement: ($) =>
      seq(
        "for",
        field("name", $.identifier),
        "=",
        field("start", $.expression),
        ",",
        field("end", $.expression),
        optional(seq(",", field("step", $.expression))),
        "do",
        optional(field("body", $.block)),
        "end",
      ),

    local_variable_declaration: ($) =>
      seq(
        "local",
        alias($._local_variable_list, $.variable_list),
        optional(seq("=", alias($._value_list, $.expression_list))),
      ),
    _local_variable_list: ($) =>
      _list(alias($._local_variable, $.variable), ","),
    variable_assignment: ($) =>
      seq($.variable_list, "=", alias($._value_list, $.expression_list)),
    variable_list: ($) => _list($.variable, ","),

    binary_expression: ($) =>
      choice(
        ...[
          ["or", PREC.OR],
          ["and", PREC.AND],
          ["==", PREC.COMPARATIVE],
          ["~=", PREC.COMPARATIVE],
          ["<", PREC.COMPARATIVE],
          [">", PREC.COMPARATIVE],
          ["<=", PREC.COMPARATIVE],
          [">=", PREC.COMPARATIVE],
          ["|", PREC.BIT_OR],
          ["~", PREC.BIT_NOT],
          ["&", PREC.BIT_AND],
          ["<<", PREC.BIT_SHIFT],
          [">>", PREC.BIT_SHIFT],
          ["+", PREC.ADDITIVE],
          ["-", PREC.ADDITIVE],
          ["*", PREC.MULTIPLICATIVE],
          ["/", PREC.MULTIPLICATIVE],
          ["//", PREC.MULTIPLICATIVE],
          ["%", PREC.MULTIPLICATIVE],
        ].map(([operator, priority]) =>
          prec.left(
            priority,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
        ...[
          ["..", PREC.CONCATENATION],
          ["^", PREC.POWER],
        ].map(([operator, priority]) =>
          prec.right(
            priority,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      ),

    expression_list: ($) => _list($.expression, ","),

    variable: ($) => choice(field("name", $.identifier), $._table_variable),
    _table_variable: ($) =>
      seq(
        field(
          "table",
          choice(
            $.identifier,
            alias($._table_variable, $.variable),
            $.call,
            $.parenthesized_expression,
          ),
        ),
        choice($._indexed_field_identifier, $._named_field_identifier),
      ),
    number: ($) =>
      token(
        seq(
          optional("-"),
          choice(
            seq(_numeral(DECIMAL_DIGIT), optional(_exponent_part("e", "E"))),
            seq(
              choice("0x", "0X"),
              _numeral(HEXADECIMAL_DIGIT),
              optional(_exponent_part("p", "P")),
            ),
          ),
        ),
      ),

    identifier: () => IDENTIFIER,
